[project]
dependencies = [
    "numpy >= 1.23",
    "packaging ~= 24.1",
    "pdbfixer @ git+https://github.com/openmm/pdbfixer.git",
    "hmmer ~= 3.4",
    "torch >= 1.8",
    "einops ~= 0.8",
    "requests ~= 2.32",
    "scipy ~= 1.10",
    "riot_na ~= 1.2",
]
description = "Set of functions to predict the structure of immune receptor proteins"
license = { file = "LICENSE" }
maintainers = [
    { name = "Brennan Abanades", email = "brennan.abanadeskenyon@stx.ox.ac.uk" },
]
name = "ImmuneBuilder"
readme = "README.md"
requires-python = ">=3.10, <3.12"
version = "1.2"


[project.optional-dependencies]
# development dependency group
development = ["pytest"]

[tool.poetry]
packages = [{ include = "ImmuneBuilder" }]
